[gd_scene load_steps=2 format=3 uid="uid://s07natis6oh1"]

[ext_resource type="Script" uid="uid://ds2b0kq6ym1we" path="res://scripts/dialog_box.gd" id="1_igbyk"]

[node name="DialogBox" type="CanvasLayer"]
script = ExtResource("1_igbyk")

[node name="Panel" type="Panel" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 490.0
offset_top = 811.0
offset_right = -490.0
offset_bottom = -101.0
grow_horizontal = 2
grow_vertical = 2

[node name="DialogText" type="Label" parent="Panel"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 29.0
offset_top = -128.0
offset_right = 109.0
offset_bottom = -95.0
grow_horizontal = 2
grow_vertical = 0
text = "textinho bonito"

[node name="GoodChoiceButton" type="Button" parent="Panel"]
layout_mode = 0
offset_left = 203.0
offset_top = 93.0
offset_right = 409.0
offset_bottom = 138.0
mouse_filter = 2
text = "Boa"

[node name="BadChoiceButton" type="Button" parent="Panel"]
layout_mode = 0
offset_left = 496.0
offset_top = 93.0
offset_right = 703.0
offset_bottom = 142.0
mouse_filter = 2
text = "MÃ¡"

[node name="ContinueLabel" type="Label" parent="Panel"]
layout_mode = 0
offset_left = 2.0
offset_top = 106.0
offset_right = 940.0
offset_bottom = 129.0
text = "Pressiona X para continuar..."
horizontal_alignment = 1
vertical_alignment = 1
